--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
-.App {
-  text-align: center;
+.App{
+  font-family: 'Roboto', sans-serif;
 }
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
