--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,7 +1,7 @@
 .header{
-    background-color: black;
+    background-color: rgba(0, 0, 255, 0.836);
     margin: 20px 50px;
-    color: rgba(255, 255, 255, 0.89);
+    color: rgba(255, 255, 255, 0.97);
     border-radius: 20px;
     padding: 20px 0;
     text-align: center;
