--- a/src/Components/Vaccine/Vaccine.css
+++ b/src/Components/Vaccine/Vaccine.css
@@ -5,7 +5,10 @@
     border-radius: 5px;    
 }
 .vaccine-info{
-    padding: 10px;
+    background-color: black;
+    color: rgba(255, 255, 255, 0.96);
+    padding-left: 20px;
+    
 }
 .vaccine-info h3{
     text-align: center;
@@ -13,15 +16,25 @@
 }
 .vaccine-image img{
     width:100%;
+    height: 180px;
+    padding-block-end: 0;
 }
 .vaccine-info p{
     font-size: 18px;
     font-weight: 500;
+    margin-block-end: 0.1em;
+    padding-bottom: 8px;
+}
+.vaccine-info h3{
+    margin: 0;
+    color: rgba(255, 255, 255, 0.96);
+    padding-top: 10px;
+    margin-right: 20px;
 }
 button{
     width: 100%;
     background-color: blue;
-    color: white;
+    color: rgba(255, 255, 255, 0.96);
     padding: 10px 0;
     font-size: 18px;
     cursor: pointer;
