--- a/src/Components/Vaccine/Vaccine.css
+++ b/src/Components/Vaccine/Vaccine.css
@@ -5,35 +5,36 @@
     border-radius: 5px;    
 }
 .vaccine-info{
-    background-color: black;
+    background-color: blue;
     color: rgba(255, 255, 255, 0.96);
     padding-left: 20px;
+    padding-top: 10px;
     
 }
-.vaccine-info h3{
-    text-align: center;
-    color: blue;
-}
+
 .vaccine-image img{
     width:100%;
     height: 180px;
     padding-block-end: 0;
+    
 }
 .vaccine-info p{
     font-size: 18px;
     font-weight: 500;
     margin-block-end: 0.1em;
+    margin-block-start: 0.4em;
     padding-bottom: 8px;
 }
 .vaccine-info h3{
-    margin: 0;
+    text-align: center;
+    margin: 0 0 20px;
     color: rgba(255, 255, 255, 0.96);
     padding-top: 10px;
     margin-right: 20px;
 }
 button{
     width: 100%;
-    background-color: blue;
+    background-color: black;
     color: rgba(255, 255, 255, 0.96);
     padding: 10px 0;
     font-size: 18px;
