customize UI design

--- a/src/Components/VaccineCart/VaccineCart.css
+++ b/src/Components/VaccineCart/VaccineCart.css
@@ -6,7 +6,7 @@
 
 .vaccine-cost-info{
     background-color: rgba(0, 0, 0, 0.95);
-    padding: 5px 0;
+    padding: 5px;
     border-radius: 20px;
     
 }
